# smm-vk

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  tox.ini
smm_vk/cli/: default.py  groups.py  main.py  object.py
smm_vk/clients/vk_client/: driver.py  vk_client.py
smm_vk/configs/: __init__.py  base.py
smm_vk/containers/: vk_client.py
smm_vk/utils/: base_file_saver.py  ids_file_saver.py
