[tool.poetry]
name = "smm-vk"
version = "0.1.0"
description = ""
authors = ["burn_in_soul <burn-in-soul@uandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.1"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
autoflake = "2.3.1"
black = "24.4.2"
flake8 = "7.0.0"
flake8-plugin-utils = "1.3.3"
flake8-pytest-style = "2.0.0"
flake8-tidy-imports = "4.10.0"
freezegun = "1.5.1"
pytest = "8.2.1"
pre-commit = "3.7.1"
mypy-extensions = "1.0.0"
pathspec = "0.12.1"
platformdirs = "4.2.2"
mypy = "1.10.0"
pytest-cov = "5.0.0"
pytest-asyncio = "0.23.7"
filelock = "3.14.0"
distlib = "0.3.8"
pytest-xdist = "^3.6.1"
pinned-import-linter = "^1.1.0"

[tool.mypy]
python_version = "3.11"
exclude = ["venv", ".venv", "tests"]
strict = false
plugins = ["pydantic.mypy"]
disallow_untyped_defs = false
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = "."
norecursedirs = [".*", "__pycache__", "venv", "static", ".venv"]

[tool.coverage.run]
omit = ["*/versions/*", "*/__main__.py", "*/tests/*", "*/fixtures/*"]

[tool.pinned_import_linter]
package_names = ["functools","pydantic","datetime","typing","typing_extensions","uuid","pytest","logging","asyncio","aiohttp"]


[tool.pinned_import_linter.functools]
allow_alias = false
allow_package = false

[tool.pinned_import_linter.pydantic]
allow_alias = false
allow_package = false

[tool.pinned_import_linter.datetime]
allow_alias = false
allow_package = false

[tool.pinned_import_linter.typing]
allow_alias = false
allow_package = false

[tool.pinned_import_linter.typing_extensions]
allow_alias = false
allow_package = false

[tool.pinned_import_linter.uuid]
allow_alias = false
allow_from = false

[tool.pinned_import_linter.pytest]
allow_alias = false
allow_from = false

[tool.pinned_import_linter.logging]
allow_alias = false
allow_from = false

[tool.pinned_import_linter.asyncio]
allow_alias = false
allow_from = false

[tool.pinned_import_linter.aiohttp]
allow_alias = false
allow_from = false
